# git-sync-rs

./: Cargo.toml  PLAN.md  README.md  RESTART.md  build.rs  flake.nix  justfile
.claude/: settings.local.json
.claude/commands/: commit.md
.github/workflows/: ci.yml
docs/plans/: 2026-01-23-conflict-branch-design.md  tray-indicator.md
src/: config.rs  error.rs  lib.rs  main.rs  sync.rs  watch.rs
src/sync/: transport.rs
src/tray/: indicator.rs  mod.rs  state.rs
src/watch/: event_filter.rs
tests/: auto_commit.rs  basic_sync.rs  bidirectional_sync.rs  binary_conflict.rs  conflict_branch.rs  core_regressions.rs  debounce_starvation.rs  file_deletion.rs  file_watch.rs  gitignore.rs  merge_conflict.rs  multiple_users.rs  nested_repo.rs  periodic_sync.rs  skip_hooks.rs  sync_deadlock.rs  uncommitted_changes.rs  watch_gitignore.rs
tests/common/: mod.rs
