[package]
name = "git-sync-rs"
version = "0.6.0"
edition = "2021"
description = "Automatic git repository synchronization with file watching"
license = "MIT OR Apache-2.0"
repository = "https://github.com/colonelpanic8/git-sync-rs"
homepage = "https://github.com/colonelpanic8/git-sync-rs"
readme = "README.md"
keywords = ["git", "sync", "watch", "auto-commit", "backup"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Ivan Malison <IvanMalison@gmail.com>"]

[dependencies]
git2 = "0.18"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
hostname = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
shellexpand = "3.0"
ksni = { version = "0.3", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

[features]
tray = ["ksni", "image"]

[dev-dependencies]
tempfile = "3.0"
